# MINICAD

./: CAD_OCC_项目大纲.md  CMakeLists.txt  README.md  build_debug.sh
docs/: 里程碑A_跑通Qt+OCC视口.md  里程碑B_创建与显示基础体_选择 copy.md  里程碑C_创建删除变换_undoredo.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/commands/: BoolBrepCommenCommand.cpp  BoolBrepCommenCommand.h  CommandManager.cpp  CommandManager.h  CreatePrimitiveCommand.cpp  CreatePrimitiveCommand.h  DelCommand.cpp  DelCommand.h  HideCommand.cpp  HideCommand.h  ICommand.h  ImportStepCommand.cpp  ImportStepCommand.h  ShowAllCommand.cpp  ShowAllCommand.h
src/model/: Document.cpp  Document.h  SceneObject.h
src/viewport/: OccViewportWidget.cpp  OccViewportWidget.h
